# lagrs

./: .gitignore  Cargo.toml  PARALLELISM.md  PYTHON_RUST_DATA_FLOW.md  README.md  ROADMAP.md  SETUP_GITHUB.md  SPEEDUP_EXPLANATION.md  benchmark_demo.py
.github/workflows/: README.md  ci.yml
demos/: README.md  demo.py
lagrs-bench/: Cargo.toml
lagrs-bench/src/: main.rs
lagrs-core/: Cargo.toml
lagrs-core/src/: arima.rs  lib.rs  rolling.rs  utils.rs
lagrs-python/: Cargo.toml  pyproject.toml
lagrs-python/src/: lib.rs
tests/: test_lagrs.py
